fix the gap between navitems

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,7 +143,7 @@ a {
   position: sticky;
   top: 0;
   z-index: 9999;
-  height: 70px;
+  min-height: 80px;
   background: #3e2723;
   display: flex;
   align-items: center;
@@ -364,7 +364,9 @@ a {
   .topheader {
     display: none;
   }
-
+  .desktopMenu{
+    gap: 10px;
+  }
 }
 
 @media(max-width:991px) {
